k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centurion-be
spec:
  selector:
    matchLabels:
      app: centurion-be-pod
  template:
    metadata:
      labels:
        app: centurion-be-pod
    spec:
      containers:
      - name: centurion-be-container
        image: krakenlink/centurionbe:v1
        imagePullPolicy: Always
        resources:
          requests:
            memory: "600Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: gcp-secret-volume
          mountPath: "/var/secrets/google"
          readOnly: true
      volumes:
      - name: gcp-secret-volume
        secret:
          secretName: gcp-secret
