k3s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centurion-be-service
spec:
  type: NodePort
  selector:
    app: centurion-be-pod
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
    name: http
