k3s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centurion-be-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik" # (Hoặc "traefik" tùy vào K8s sếp đang xài)
spec:
  rules:
  - host: api.hoangvu.io.vn  # <--- THAY BẰNG TÊN MIỀN THẬT CỦA SẾP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: centurion-be-service # Tên cái service lúc nãy
            port:
              number: 80 # Cổng "hành lang" của Service sếp đã cấu hình lúc nãy
